tests/snapshots/dependencies__default__fail__virtual_workspace_single_package_multi_target.snap
---
source: tests/dependencies.rs
expression: output
---
CMD:
dependencies

STDERR:
Error: Multiple targets present in package,
please explicitly select one via --lib or --bin flag.

Targets present in package:
- package_multi_target (--lib)
- package_multi_target (--bin package_multi_target)


STDOUT:
